--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <ul class="dates-list">
       <li>
         <strong data-lang-nl="Opening:" data-lang-en="Opening:">Opening:</strong>
-        <span data-lang-nl="zaterdag 13 september" data-lang-en="Saturday 13 September">zaterdag 13 september</span>
+        <span data-lang-nl="zaterdag 13 september vanaf 15u" data-lang-en="Saturday 13 September from 3pm">zaterdag 13 september vanaf 15u</span>
       </li>
       <li>
         <strong data-lang-nl="Tentoonstelling:" data-lang-en="Exhibition:">Tentoonstelling:</strong>
