--- a/paginas/audioguide.html
+++ b/paginas/audioguide.html
@@ -224,7 +224,7 @@
   <!-- FOOTER -->
   <footer>
     <div class="footer-inner">
-      <div>© <span id="year"></span> Vitrien — Leuven</div>
+      <div>© <span id="year"></span>Webdesign door Judith Caeyers & Thomas De Paepe</div>
       <a class="mono-link" href="#top" data-lang-nl="Naar boven" data-lang-en="Back to top">Naar boven</a>
     </div>
   </footer>
