--- a/paginas/artists/Jason.html
+++ b/paginas/artists/Jason.html
@@ -91,8 +91,8 @@
           </p>
           <div class="meta" style="margin-top:20px" data-lang-nl="Praktisch" data-lang-en="Practical">Praktisch</div>
           <p>
-            Website: <a class="mono-link" href="#" target="_blank" rel="noopener">https://jasonslabbynck.be/</a><br>
-            Contact: <a class="mono-link" href="mailto:jason.slabbynck@gmail.com">jason.slabbynck@gmail.com</a>
+            Website: <a class="mono-link" href="#" target="_blank" rel="noopener">https://studio.slabbynck.be/</a><br>
+            Contact: <a class="mono-link" href="mailto:jason@mxmxm.be">jason@mxmxm.be</a>
           </p>
         </article>
 
@@ -113,23 +113,24 @@
         <div class="meta" data-lang-nl="Werk" data-lang-en="Work">Werk</div>
         <div class="grid gallery">
           <figure class="module">
-            <img src="../../assets/img/artists/Jason1.jpg" alt="Werk — Jason Slabbynck">
+            <img src="../../assets/img/artists/Jason/Jason1.jpg" alt="Werk — Jason Slabbynck">
           </figure>
           <figure class="module">
-            <img src="../../assets/img/artists/Jason2.jpg" alt="Werk — Jason Slabbynck">
+            <img src="../../assets/img/artists/Jason/Jason2.jpg" alt="Werk — Jason Slabbynck">
           </figure>
           <figure class="module">
-            <img src="../../assets/img/artists/Jason3.jpg" alt="Werk — Jason Slabbynck">
+            <img src="../../assets/img/artists/Jason/Jason3.jpg" alt="Werk — Jason Slabbynck">
           </figure>
           <figure class="module">
-            <img src="../../assets/img/artists/Jason4.jpg" alt="Werk — Jason Slabbynck">
+            <img src="../../assets/img/artists/Jason/Jason4.jpg" alt="Werk — Jason Slabbynck">
           </figure>
           <figure class="module">
-            <img src="../../assets/img/artists/Jason5.jpg" alt="Werk — Jason Slabbynck">
+            <img src="../../assets/img/artists/Jason/Jason5.jpg" alt="Werk — Jason Slabbynck">
           </figure>
         </div>
       </div>
     </section>
+
 
 
     <!-- ============ TERUGLINK ============ -->
